# tiny-machine

./: Cargo.toml  EXPLORE.md  README.md
.github/workflows/: rust.yml
src/: gui.rs  main.rs
src/code/: mod.rs
src/compiler/: builtin.rs  envir.rs  mod.rs  symbol_table.rs
src/parser/: ast.rs  lexer.rs  mod.rs  token.rs
src/vm/: frame.rs  mod.rs  op.rs
test/: test01.tm  test02.tm  test03.tm  test04.tm  test05.tm  test06.tm  test07.tm
