[package]
name = "tiny-machine"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# optimize = ["log/release_max_level_warn"]
#default = ["optimize"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
imgui = "0.8"
env_logger = "0.9"
game-loop = { version = "0.9.1", features = ["window"] }
imgui-wgpu = "0.19"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12"